[project]
name = "mcp-server-weather"
version = "0.1.0"
description = "MCP server for Open-Meteo weather data."
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.0.0",
  "httpx>=0.26.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "test_tools"]
